feat: 加入 admin/update-user 接口
