# internal/api/v1/admin.go
@@ -16,6 +16,7 @@ type IAdmin interface {
 
 	ListUser(c iris.Context) // 查询所有用户
 
+	UpdateUser(c iris.Context)  // 修改用户信息
 	ToggleAdmin(c iris.Context) // 切换用户是否为管理员
 
 	DeleteUser(c iris.Context) // 删除用户
@@ -117,6 +118,55 @@ func (a Admin) ListUser(c iris.Context) {
 	resp.SuccessList(users, page)
 }
 
+// 修改用户信息 godoc
+// @summary 修改用户信息
+// @description 修改某个用户的信息（此接口不允许修改用户是否为管理员）
+// @accept json
+// @produce json
+// @tags admin
+// @param id body int true "用户ID"
+// @param name body string true "用户名"
+// @param nick_name body string true "用户昵称"
+// @param phone body string true "手机号"
+// @param email body string true "邮箱"
+// @param role body string true "用户角色" Enums(student, teacher)
+// @param password body string true "密码"
+// @success 200 {object} swagger.Resp{data=model.User}
+// @router /api/v1/admin/update-user [post]
+func (a Admin) UpdateUser(c iris.Context) {
+	p := struct {
+		Id       int    `json:"id" validated:"required"`
+		Name     string `json:"name" validate:"required"`
+		NickName string `json:"nick_name" validate:"required"`
+		Phone    string `json:"phone" validate:"required"`
+		Email    string `json:"email" validated:"required"`
+		Role     string `json:"role" validated:"required,oneof=student teacher"`
+		Password string `json:"password" validated:"required"`
+	}{}
+	if ok := utils.BindAndValidate(c, &p); !ok {
+		return
+	}
+
+	ctx := c.Request().Context()
+	resp := response.New(c)
+
+	user := model.User{
+		Id:       p.Id,
+		Name:     p.Name,
+		NickName: p.NickName,
+		Phone:    p.Phone,
+		Email:    p.Email,
+		Password: p.Password,
+		Role:     p.Role,
+	}
+	err := a.userSvc.Update(ctx, &user, []string{"name", "nick_name", "phone", "email", "role", "password"})
+	if err != nil {
+		resp.Error(cerror.ServerError.WithDebugs(err))
+		return
+	}
+	resp.Success(user)
+}
+
 // 修改账号管理员权限 godoc
 // @summary 修改账号管理员权限
 // @description 修改某个用户是否是管理员，不允许取消自己的管理员权限
@@ -166,7 +216,7 @@ func (a Admin) ToggleAdmin(c iris.Context) {
 // @tags admin
 // @param id body int true "用户ID"
 // @success 200 {object} swagger.Resp
-// @router /api/v1/admin/delete-user [post[
+// @router /api/v1/admin/delete-user [post]
 func (a Admin) DeleteUser(c iris.Context) {
 	p := struct {
 		Id int `json:"id" validated:"required"`
